--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
     <script src="env.js"></script>
   </head>
   <body class="mat-typography">
-    <cadmus-root></cadmus-root>
+    <app-root></app-root>
   </body>
 </html>
